--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,12 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.15.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>7.0.3</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <properties>
